[package]
name = "msaa-test-re"
version = "0.1.0"
authors = ["cynic64 <f3bl@gmx.com>"]
edition = "2018"

[dependencies]
# render-engine = { path = "../render-engine/" }
render-engine = { git = "https://github.com/cynic64/render-engine", rev = "0327873d72e1ea9595335c9108cd0161a3d5b426" }

[profile.release]
debug = true
